ftpreview/dlli.h

typedef void *DWYCO_LIST;
typedef  void (DWYCOCALLCONV *DwycoStatusCallback)(int id, const char *msg, int percent_done, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoVideoDisplayCallback)(int chan_id, void *img, int cols, int rows, int depth);
// NOTE: the call_type is a string that can be sent in by the client on the remote
// end. This can help in cases where different screening rules apply for different
// calls in the UI.
typedef  int (DWYCOCALLCONV *DwycoCallScreeningCallback)(int chan_id, int remote_wants_to_recv_your_video, int remote_wants_to_send_you_video, int remote_wants_to_recv_your_audio, int remote_wants_to_send_you_audio, int remote_wants_to_exchange_pubchat, int remote_wants_to_exchange_privchat, const char *call_type, int len_call_type, const char *uid, int len_uid, int *accept_call_style_out, char **error_msg_out);
typedef  int (DWYCOCALLCONV *DwycoPublicChatInitCallback)(int chan_id);
typedef  int (DWYCOCALLCONV *DwycoPrivateChatInitCallback)(int chan_id, const char *not_used);
// NOTE: see comment at dwyco_command_from_keyboard regarding the commands
// and parameters that will show up here during a private chat.
typedef  int (DWYCOCALLCONV *DwycoPrivateChatDisplayCallback)(int chan_id, const char *com, int arg1, int arg2, const char *str, int len);
typedef  int (DWYCOCALLCONV *DwycoPublicChatDisplayCallback)(const char *who, int len_who, const char *line, int len_line, const char *uid, int len_uid);
typedef  void (DWYCOCALLCONV *DwycoVideoDisplayInitCallback)(int chan_id, int ui_id);
typedef  void (DWYCOCALLCONV *DwycoServerLoginCallback)(const char *str, int what);
typedef  void (DWYCOCALLCONV *DwycoMessageDownloadCallback)(int id, int what, const char *msgid, void *mdc_arg1);
// the "dll_msg" should be helpful to tech support or for debugging.
//
typedef  void (DWYCOCALLCONV *DwycoEmergencyCallback)(int whats_the_problem, int must_exit, const char *dll_msg);
// this is called when the activity timer expires.
// the timeout arg is the current timeout value in seconds
typedef void (DWYCOCALLCONV *DwycoActivityCallback)(int timeout);
// activity reporting
// as a default, the
// basic idea is that the dll sets a timer and starts it
// running. if the timer expires, the dll goes into "inactive"
// state. you could imagine all kind of stuff regarding
// this state, like giving up the camera, turning off audio, etc.
// but for now, we just tell the servers our state so it can
// be reflected to others.
// IF you want to implement your own activity checking, you
// can call this function, which automatically disables all of the
// dll's internal activity monitoring and status updating.
// you'll have to perform all your own checking, and status updating
// (see chatq_send_activity below).
// "timeout" is in seconds
// calling this function with on = 1, timeout > 0, cb != 0
// results in the timer being reset and the timer to start counting down.
// when the countdown == 0, the callback is called.
// calling this function with on = 0 will cause the timer to stop counting down.
//
void DWYCOEXPORT dwyco_enable_activity_checking(int on, int timeout, DwycoActivityCallback cb);
// you can call this if you want to use the internal dll activity checking, but
// just want to tweak the timer value it uses.
// when you call this, it resets the current timer immediately.
void DWYCOEXPORT dwyco_set_inactivity_time(int secs);
void DWYCOEXPORT dwyco_set_public_chat_init_callback(DwycoPublicChatInitCallback cb);
void DWYCOEXPORT dwyco_set_private_chat_init_callback(DwycoPrivateChatInitCallback cb);
void DWYCOEXPORT dwyco_set_private_chat_display_callback(DwycoPrivateChatDisplayCallback cb);
void DWYCOEXPORT dwyco_set_public_chat_display_callback(DwycoPublicChatDisplayCallback cb);
void DWYCOEXPORT dwyco_set_video_display_callback(DwycoVideoDisplayCallback cb);
void DWYCOEXPORT dwyco_set_video_display_init_callback(DwycoVideoDisplayInitCallback cb);
void DWYCOEXPORT dwyco_set_emergency_callback(DwycoEmergencyCallback cb);
// Warning: call screening is in the process of changing
// some of this may not be as advertised... XXX clean it up XXX
/*
if the callback is not set, normal screening occurs as it always has.
the callback is called each time a new call is received.
if the callback returns non-zero, normal call screening is performed.
otherwise, the dll checks the return value of the callbacks "accept_call_style"
to determine what to do with the call.
* ACCEPT causes the dll to immediately accept the call
and attempt media setup. the call accepted callback is called
when the devices are set up.

* REJECT causes the dll to reject the call and sends the "error message"
string back to the remote end. i think you get a destroy
callback on the channel eventually on this one.
NOTE: the DLL copies out the error string when the callback returns,
so it must be allocated or in static storage. it does NOT free the string,
that is up to the app to deal with that problem.

* DEFER causes the dll to hold the call pending "accept" "reject"
events from the UI (in this case, the "call appeared" callback is called
immediately for compatibility purposes, tho you can ignore it
if you want). the call accepted callback is called
on an accepted event, otherwise a destroy callback is
called on reject or timeout.
note also that the call-appearance-death callback is called
as usual in the DEFER cases as well.
*/

#define DWYCO_CSC_ACCEPT_CALL 1
#define DWYCO_CSC_DEFER_CALL 2
#define DWYCO_CSC_REJECT_CALL 3
void DWYCOEXPORT dwyco_set_call_screening_callback(DwycoCallScreeningCallback cb);
//
// the chat context callback is called when you are connected to a
// chatroom. the id's are session unique. names and uids must be copied out
// before the callback returns. a START_UPDATE callback is called before
// any update to the context. this can be used to batch updates in cases
// where you are initially logging in, and doing a single UI update for each
// user in the room would cause too much flicker.
// note: ca 3/15/2006, only one chat ctx is alive at once
#define DWYCO_CHAT_CTX_NEW 0		// when ctx is first created, id is new, all other parms 0
#define DWYCO_CHAT_CTX_DEL 1		// when ctx is deleted, means you have logged out of the chat server
#define DWYCO_CHAT_CTX_ADD_USER 2 	// for each user that comes into the chat room, uid and name parms valid.
#define DWYCO_CHAT_CTX_DEL_USER 3 	// for each user that leaves, only uid is valid
#define DWYCO_CHAT_CTX_UPDATE_AH 4	// update asshole-factor
#define DWYCO_CHAT_CTX_START_UPDATE 5 // happens before all update ops, can safely be ignored if flicker is not an issue
#define DWYCO_CHAT_CTX_END_UPDATE 6 // at the end of a batch of updates
#define DWYCO_CHAT_CTX_Q_ADD 7		// uid added to q. uid, qid, extra_arg = 0 for end-of-q, 1 for top of q
#define DWYCO_CHAT_CTX_Q_DEL 8		// uid removed from q
#define DWYCO_CHAT_CTX_Q_GRANT 9	// uid granted the podium, extra_arg = time in seconds to talk
// note: the following is useful for displaying status info such as
// "user is transmitting" or something like that. in the case of
// audio, you don't have to do anything with the data, it is handled automatically
// before you get this callback
#define DWYCO_CHAT_CTX_Q_DATA 10		// uid is sending data. name param contains the data
// new arg in callback contains a DWYCO_LIST style attribute value.
// the "name" arg in the callback contains the name of the attribute that is
// being updated, the "val" is the DWYCO_LIST style value.

// names of system attributes are as follows:
// <reference document here>
// note: UID has no meaning for this message, as it is a system-wide
// attribute, rather than for any particular user.
#define DWYCO_CHAT_CTX_SYS_ATTR 11
// names of attributes current are (with values):
// "muted" - t/nil
// "god" - t/nil
// "demigod" - t/nil
// "dict-err" - users name fails smell-test
//
#define DWYCO_CHAT_CTX_UPDATE_ATTR 12		 // name is name of attribute, value as value for attr ala DWYCO_LIST
// User-defined lobbies
// Only available via ChatCtxCallback2, since there is a fair bit of
// info that comes with these msgs. Essentially, these are lobbies that
// act more or less like the old static chat lobbies, except instead of using
// switch_to_chat_server(index), you use dwyco_switch_to_chat_server2(lobby-id)
// where the lobby-id is available from the add_lobby msg.
// note: for compatibility, a directory server comes with the
// the chat server "for free".
#define DWYCO_CHAT_CTX_ADD_LOBBY 13
#define DWYCO_CHAT_CTX_DEL_LOBBY 14
#define DWYCO_SL_ULOBBY_ID "000"
#define DWYCO_SL_ULOBBY_HOSTNAME "001"
#define DWYCO_SL_ULOBBY_IP "002"
#define DWYCO_SL_ULOBBY_PORT "003"
#define DWYCO_SL_ULOBBY_RATING "004"
#define DWYCO_SL_ULOBBY_DISPLAY_NAME "005"
#define DWYCO_SL_ULOBBY_CATEGORY "006"
#define DWYCO_SL_ULOBBY_BACKUP "007"
// note: internal pvt name at 008
#define DWYCO_SL_ULOBBY_MAX_USERS "009"
#define DWYCO_SL_ULOBBY_SUBGOD_UID "010"
// used internally, do not use
#define DWYCO_SL_ULOBBY_PW_do_not_use "011"
// GOD tracking, this is dynamic. When a god comes online you
// get an add_god message, no matter where they are.
// As a god moves around between servers, you will get
// a del-god when they leave, and a subsequent add when they
// enter a new server. You get a record of info indicating what
// kind of god-powers they have, and where they are (what server.)
#define DWYCO_CHAT_CTX_ADD_GOD 15   // a vector of extra info is sent as well in the callback
#define DWYCO_CHAT_CTX_DEL_GOD 16   // just the UID of the god that is gone
// This the info you get when you get a add-god msg
#define DWYCO_GT_NAME "000"
#define DWYCO_GT_WHERE "001"
#define DWYCO_GT_GOD "002"
#define DWYCO_GT_DEMIGOD "003"
#define DWYCO_GT_SUBGOD "004"
#define DWYCO_GT_SERVER_ID "005"
//
// when you get a ui-call-vector message, the
// value vector is accessed as a DWYCO_LIST with
// these columns
#define DWYCO_CV_MAX_AUDIO "000"
#define DWYCO_CV_MAX_VIDEO "001"
#define DWYCO_CV_CHAT "002"
#define DWYCO_CV_MAX_AUDIO_RECV "003"
#define DWYCO_CV_MAX_VIDEO_RECV "004"
//
// "popup" sysattr
#define DWYCO_POPUP_FROM_UID "000"
#define DWYCO_POPUP_FROM_HANDLE "001"
#define DWYCO_POPUP_MSG "002"
// this is a generic function used to set persistent sys-attrs in the
// server. some sys attrs are used by the dll to configure bandwidths
// and so on. you must be a god in order to use this command.
// sysattrs that are set with this command are automatically sent to all
// users of the chat server (via a SYS_ATTR msg).
// NOTE: there is no limit on the name and value (except the name has to be
// a string). so you can set your own sysattrs, and they
// will automatically be remembered by the server. you might use this for
// example to implement client-specific functions such as server-wide
// popups, etc. NOTE: currently ANY SYSATTR THAT STARTS WITH "us-" is
// reserved for the DLL.
// you can send in either a DWYCO_TYPE_NIL (in which case all the val
// params are ignored) DWYCO_TYPE_INT, in which case val_int param
// is used, or DWYCO_TYPE_STRING, in which case val and val_len are
// used.
int DWYCOEXPORT dwyco_chat_set_sys_attr(const char *name, int name_len,
                                        int dwyco_type, const char *val, int val_len, int val_int);
// types returned by get_list
#define DWYCO_TYPE_NIL 0
#define DWYCO_TYPE_STRING 1
#define DWYCO_TYPE_INT 2
// Return values:
// 0 = cid is invalid, or some immediate resource problem connecting to server.
// in both cases, the current lobby info is still valid.
// -1 = password incorrect. the current lobby info and connection is unaffected
// 1 = switch is in progress, all current lobby info is invalidated until
// the server switch is completed successfully.
// if the server switch fails, you will have to switch back to a system
// server using switch_to_chat_server in order to revalidate user lobby info.
int DWYCOEXPORT dwyco_switch_to_chat_server2(const char *cid, const char *pw);