bld/cdc32/old/cdcdll.pas


type
DwycoServerLoginCallback = procedure(str: PChar; what: Integer); stdcall;

// this is called when the activity timer expires.
// the timeout arg is the current timeout value in seconds
type
DwycoActivityCallback = procedure(timeout: Integer); stdcall;

{ ************************************************************************** }
{                                                                            }
{ Activity reporting                                                         }
{                                                                            }
{ As a default, the basic idea is that the dll sets a timer and starts it    }
{ running. if the timer expires, the dll goes into "inactive" state. you     }
{ could imagine all kind of stuff regarding this state, like giving up the   }
{ camera, turning off audio, etc. but for now, we just tell the servers our  }
{ state so it can be reflected to others.                                    }
{                                                                            }
{ IF you want to implement your own activity checking, you can call this     }
{ function, which automatically disables all of the dll's internal activity  }
{ monitoring and status updating.                                            }
{                                                                            }
{ You'll have to perform all your own checking, and status updating (see     }
{ chatq_send_activity below).                                                }
{                                                                            }
{ "timeout" is in seconds                                                    }
{                                                                            }
{ Calling this function with on = 1, timeout > 0, cb != 0 results in the     }
{ timer being reset and the timer to start counting down. when the           }
{ countdown == 0, the callback is called.                                    }
{                                                                            }
{ Calling this function with on = 0 will cause the timer to stop.            }
{                                                                            }
{ ************************************************************************** }
procedure dwyco_enable_activity_checking(on: Integer; timeout: Integer; cb: DwycoActivityCallback); stdcall;

// you can call this if you want to use the internal dll activity checking, but
// just want to tweak the timer value it uses.
// when you call this, it resets the current timer immediately.
procedure dwyco_set_inactivity_time(secs: Integer); stdcall;

{$IFDEF IMW32}
{
/ External IM errors.
// this is the only way errors and statuses are
// returned at the moment. it is very primitive now...
// str can be:
//  "login" - means the eim has been successfully logged in. what = 1
//  "error" - means an error occurred on the eim, what = error code. the codes are defined below.
//          note: in the current setup, there is no way to matchup
//          errors with certain operations (in the case of remove users, msg sends, etc.)
//          read the errors below carefully to figure out what will happen
//          when the error occurs.
//  "disconnect" - the eim has been disconnected by the system. what = 0
//
// note: in order to avoid having to include the
// imw headers, these statuses are copied from
// the imw headers, bad, but the alternative is worse.
}
const DWYCO_EIM_ERROR_CANT_ADD_USER = 1;     //error occurs while adding user	(i.e. such user doesn't exist)
const DWYCO_EIM_ERROR_CANT_RENAME_USER = 2;  //error occurs while renaming user (i.e. no such user in CL)
const DWYCO_EIM_ERROR_CANT_REMOVE_USER = 3;  //error occurs while removing user (i.e. no such user in CL)
const DWYCO_EIM_ERROR_CANT_SEND_MESSAGE = 4; //error occurs while sending message (for example user is offline in MSN)
const DWYCO_EIM_ERROR_RECONNECTING = 7;      //connection fails and transport reconnects

// NOTE: when any of these errors occurs, the DLL automatically turns off
// auto-login for that EIM. this is because it is unlikely the login will
// ever succeed until the user fixes something. also, this avoids a problem
// where yahoo corrupts its address book while two clients fight over the
// account.
const DWYCO_EIM_ERROR_ACCOUNT_USED_ON_ANOTHER_PC = 5; //somebody uses the same account on another PC and our connection has been failed
const DWYCO_EIM_ERROR_WRONG_LOGIN_PASSWORD = 6;       //authorization error
const DWYCO_EIM_ERROR_CONNECTION_FAILED = 8;          //connection to the service has been failed after several tries of reconnect
const DWYCO_EIM_ERROR_CANT_RESOLVE_NAME = 9;          //can't connect to the service because of inability to resolve server name

type
DwycoEIMServerLoginCallback = procedure(eim: Integer; msg: PChar; code: Integer); stdcall;
{$ENDIF}

type
DwycoMessageDownloadCallback = procedure(id: Integer; what: Integer; msgid: PChar; mdc_arg: Pointer); stdcall;

type
DwycoPalAuthCallback = procedure(uid: PChar; len: Integer; what: Integer); stdcall;
    
function dwyco_set_public_chat_init_callback(cb: DwycoPublicChatInitCallback): Integer ;stdcall   ;
function dwyco_set_private_chat_init_callback(cb: DwycoPrivateChatInitCallback): Integer ;stdcall   ;
function dwyco_set_private_chat_display_callback(cb: DwycoPrivateChatDisplayCallback): Integer ;stdcall   ;
function dwyco_set_public_chat_display_callback(cb: DwycoPublicChatDisplayCallback): Integer ;stdcall   ;
procedure dwyco_set_video_display_callback(cb: DwycoVideoDisplayCallback) ;stdcall   ;
procedure dwyco_set_video_display_init_callback(cb: DwycoVideoDisplayInitCallback) ;stdcall  ;
procedure dwyco_set_motd_callback(cb: DwycoStatusCallback) ;stdcall  ;
{procedure dwyco_set_unregister_callback(cb: DwycoStatusCallback) ;stdcall  ;}
procedure dwyco_set_emergency_callback(cb: DwycoEmergencyCallback);stdcall  ;

{ see dlli.h for details on call screening }
const DWYCO_CSC_ACCEPT_CALL = 1;
const DWYCO_CSC_DEFER_CALL = 2;
const DWYCO_CSC_REJECT_CALL = 3;
procedure dwyco_set_call_screening_callback(cb: DwycoCallScreeningCallback);stdcall  ;

{
 // the chat context callback is called when you are connected to a
 // chatroom. the id's are session unique. names and uids must be copied out
 // before the callback returns. a START_UPDATE callback is called before
 // any update to the context. this can be used to batch updates in cases
 // where you are initially logging in, and doing a single UI update for each
 // user in the room would cause too much flicker.
 // note: ca 3/15/2006, only one chat ctx is alive at once
 }
const DWYCO_CHAT_CTX_NEW = 0;          // when ctx is first created, id is new, all other parms 0
const DWYCO_CHAT_CTX_DEL = 1;          // when ctx is deleted, means you have logged out of the chat server
const DWYCO_CHAT_CTX_ADD_USER = 2;     // for each user that comes into the chat room, uid and name parms valid.
const DWYCO_CHAT_CTX_DEL_USER = 3;     // for each user that leaves, only uid is valid
const DWYCO_CHAT_CTX_UPDATE_AH = 4;    // update asshole-factor, doesn't work in this version, should be ignored
const DWYCO_CHAT_CTX_START_UPDATE = 5; // happens before all update ops, can safely be ignored if flicker is not an issue
const DWYCO_CHAT_CTX_END_UPDATE = 6;   // at the end of a batch of updates
const DWYCO_CHAT_CTX_Q_ADD = 7;        // uid added to q. uid, qid, extra_arg = 0 for end-of-q, 1 for top of q
const DWYCO_CHAT_CTX_Q_DEL = 8;        // uid removed from q
const DWYCO_CHAT_CTX_Q_GRANT = 9;      // uid granted the podium, extra_arg = time in seconds to talk
// note: the following is useful for displaying status info such as
// "user is transmitting" or something like that. in the case of audio, you
// don't have to do anything with the data, it is handled automatically
// before you get this callback
const DWYCO_CHAT_CTX_Q_DATA = 10;      // uid is sending data. name param contains the data
// see comments in dlli.h regarding these messages
const DWYCO_CHAT_CTX_SYS_ATTR = 11;
const DWYCO_CHAT_CTX_UPDATE_ATTR = 12;

// 2010.1
// User-defined lobbies
// Only available via ChatCtxCallback2, since there is a fair bit of
// info that comes with these msgs. Essentially, these are lobbies that
// act more or less like the old static chat lobbies, except instead of using
// switch_to_chat_server(index), you use dwyco_switch_to_chat_server2(lobby-id)
// where the lobby-id is available from the add_lobby msg.
// note: for compatibility, a directory server comes with the
// the chat server "for free". this is mainly because we want to have
// access to profiles, and the directory is what provides these at the
// moment.
const DWYCO_CHAT_CTX_ADD_LOBBY = 13;
const DWYCO_CHAT_CTX_DEL_LOBBY = 14;

const DWYCO_SL_ULOBBY_ID = '000';
const DWYCO_SL_ULOBBY_HOSTNAME = '001';
const DWYCO_SL_ULOBBY_IP = '002';
const DWYCO_SL_ULOBBY_PORT = '003';
const DWYCO_SL_ULOBBY_RATING = '004';
const DWYCO_SL_ULOBBY_DISPLAY_NAME = '005';
const DWYCO_SL_ULOBBY_CATEGORY = '006';
const DWYCO_SL_ULOBBY_BACKUP = '007';
// note: internal pvt name at 008
const DWYCO_SL_ULOBBY_MAX_USERS = '009';
const DWYCO_SL_ULOBBY_SUBGOD_UID = '010';
// DWYCO_TYPE_NIL = no password, otherwise, special hash
// that is used internally.
const DWYCO_SL_ULOBBY_PW_do_not_use = '011';

// GOD tracking, this is dynamic. When a god comes online you
// get an add_god message, no matter where they are.
// As a god moves around between servers, you will get
// a del-god when they leave, and a subsequent add when they
// enter a new server. You get a record of info indicating what
// kind of god-powers they have, and where they are (what server.)
const  DWYCO_CHAT_CTX_ADD_GOD = 15;   // a vector of extra info is sent as well in the callback
const  DWYCO_CHAT_CTX_DEL_GOD = 16;   // just the UID of the god that is gone

// This the info you get when you get a add-god msg
//name where god demigod subgod
const  DWYCO_GT_NAME = '000';
const  DWYCO_GT_WHERE = '001';
const  DWYCO_GT_GOD = '002';
const  DWYCO_GT_DEMIGOD = '003';
const  DWYCO_GT_SUBGOD = '004';
const  DWYCO_GT_SERVER_ID = '005';
// when you get a ui-call-vector message, the value vector is accessed
// as a DWYCO_LIST with these columns;
const  DWYCO_CV_MAX_AUDIO      = '000';
const  DWYCO_CV_MAX_VIDEO      = '001';
const  DWYCO_CV_CHAT           = '002';
const  DWYCO_CV_MAX_AUDIO_RECV = '003';
const  DWYCO_CV_MAX_VIDEO_RECV = '004';

// "popup" sysattr
const DWYCO_POPUP_FROM_UID    = '000';
const DWYCO_POPUP_FROM_HANDLE = '001';
const DWYCO_POPUP_MSG         = '002';

// this is a generic function used to set persistent sys-attrs in the
// server. some sys attrs are used by the dll to configure bandwidths
// and so on. you must be a god in order to use this command.
// sysattrs that are set with this command are automatically sent to all
// users of the chat server (via a SYS_ATTR msg).
// NOTE: there is no limit on the name and value (except the name has to be
// a string). so you can set your own sysattrs, and they
// will automatically be remembered by the server. you might use this for
// example to implement client-specific functions such as server-wide
// popups, etc. NOTE: currently ANY SYSATTR THAT STARTS WITH "us-" is
// reserved for the DLL.
// you can send in either a DWYCO_TYPE_NIL (in which case all the val
// params are ignored) DWYCO_TYPE_INT, in which case val_int param
// is used, or DWYCO_TYPE_STRING, in which case val and val_len are
// used.
function dwyco_chat_set_sys_attr(name: PChar; name_len : Integer;
	                         dwyco_type: Integer;
                                 val: PChar; val_len: Integer;
                                 val_int: Integer) : Integer ;stdcall  ;
